clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service-cluster-ip
  namespace: eks-sample-app
spec:
  type: ClusterIP
  selector:
    app: eks-sample-linux-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
