eks-sample-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-sample-service
  namespace: eks-sample-app
  labels:
    run: eks-sample-linux-app
spec:
  ports:
    - port: 8761
      targetPort: 8761
      protocol: TCP
  selector:
    app: eks-sample-linux-app
  type: LoadBalancer
