front-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service-nodeport
  namespace: eks-sample-app
  annotations:
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /front/
spec:
  type: NodePort
  selector:
    app: eks-front-linux-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 32056
