loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
  name: sample-service-loadbalancer
  namespace: eks-sample-app
  labels:
    run: eks-sample-linux-app
spec:
  ports:
    - port: 8761
      targetPort: 8761
      protocol: TCP
  selector:
    app: eks-sample-linux-app
  type: LoadBalancer
