nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service-nodeport
  namespace: eks-sample-app
spec:
  type: NodePort
  selector:
    app: eks-sample-linux-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32055
