sample-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service-nodeport
  namespace: eks-sample-app
spec:
  type: NodePort
  selector:
    app: eks-sample-linux-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32055
