ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "eks-sample-ingress"
  namespace: "eks-sample-app"
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: services
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: eks-sample-ingress
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sample-service-nodeport
                port:
                  number: 8080

          - path: /front
            pathType: Prefix
            backend:
              service:
                name: front-service-nodeport
                port:
                  number: 8081
